# visyo

./: .editorconfig  CHANGELOG.md  Cargo.toml  Makefile  README.md  visyo.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  release.yml
scripts/: release-version.sh
src/: cli.rs  config.rs  main.rs
src/theme/: base.rs
